# eecs583fp

./: .gitignore  CMakeLists.txt  README.md  a.out  fp.h  profiling.cpp  run.sh  runbuild.sh  test.cpp  viz.sh
583compress/: compress.in  compress.in.Z  compress.prof  default.profraw  exec_info_input1  pgo.profdata  run.sh
583compress/src/: compress.c
583simple/: .ConstructNum.dot  .GetRandIdxSometimes.dot  ._inst_log.dot  .calcStuff_PURE_.dot  .fn_PURE_.dot  .getArea_PURE_.dot  .initArr.dot  .main.dot  .other_PURE_.dot  .pureFunc_PURE_.dot  .randomfcn.dot  a.out  classex.bc  classex.opt.bc  classex.prof.bc  classex_stats.txt  default.profraw  exec_info_input1  licm.bc  licm.opt.bc  licm.prof.bc  pgo.profdata  run.sh  run_analysis.sh  run_demo.sh  run_optim.sh  run_profile.sh  simple.bc  simple.opt.bc  simple.prof  simple.prof.bc  sqrt.bc  sqrt.opt.bc  sqrt.prof.bc
583simple/output1/: OUT
583simple/src/: classex.c  hw2.cpp  hw2_louis.cpp  hw2perf2.c  hw2perf3.c  hw2perf4.c  licm.c  simple.c  sqrt.c
583wc/: cccp.c  default.profraw  exec_info_input1  pgo.profdata  run.sh  wc.prof
583wc/input1/: cccp.c
583wc/output1/: result.out
583wc/src/: wc.c
ANALYSIS/: CMakeLists.txt  analysispass.cpp
HW1PASS/: CMakeLists.txt  instructionSets.h  mypass.cpp
OPT/: CMakeLists.txt  optpass.cpp
OPTIM/: CMakeLists.txt  optimpass.cpp
PROFILE/: CMakeLists.txt  helpers.hpp  profilepass.cpp
submission/results/: 583compress.opcstats  583simple.opcstats  583wc.opcstats
submission/src/: mypass.cpp
toy/: default.profraw  pgo.profdata  toy.prof
toy/src/: toy.c
